--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "scripts": {
         "build": "tsc",
         "dev": "tsc -w"
+    },
+    "dependencies": {
+        "@types/chrome": "^0.0.217"
     }
 }
