--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
     "name": "wtwn",
     "version": "1.0.0",
     "devDependencies": {
-        "typescript": "^4.9.5"
+        "@types/chrome": "^0.0.217",
+        "autoprefixer": "^10.4.13",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.3",
+        "html-webpack-plugin": "^5.5.0",
+        "postcss": "^8.4.21",
+        "postcss-loader": "^7.0.2",
+        "style-loader": "^3.3.1",
+        "tailwindcss": "^3.2.7",
+        "ts-loader": "^9.4.2",
+        "typescript": "^4.9.5",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
     },
     "scripts": {
-        "build": "tsc",
-        "dev": "tsc -w"
+        "dev": "webpack --watch --config webpack.dev.js",
+        "build": "webpack --config webpack.prod.js"
     },
-    "dependencies": {
-        "@types/chrome": "^0.0.217"
-    }
+    "dependencies": {}
 }
