design for home and add pages complete

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
             "js": ["content.bundle.js"]
         }
     ],
-    "permissions": ["storage"],
+    "permissions": ["storage", "tabs"],
 
     "host_permissions": ["*://*.myanimelist.net/*"],
 
